RESOLVED FIXED84535
Blackberry incorrectly only allows netscape plugins named jnext and flash
https://bugs.webkit.org/show_bug.cgi?id=84535
Summary Blackberry incorrectly only allows netscape plugins named jnext and flash
Benjamin Meyer
Reported 2012-04-21 10:29:42 PDT
The original implement ion of FrameLoaderClientBlackBerry::createPlugin was a partial copy from another port. In the Qt port there is some workarounds for flash which is why this exists there. Sadly the bits that were copied made it so only flash worked, but as flash was the only plugin on the system this issue was not noticed until QNX tried to get jnext working. Tracing it down to this bit of code rather then correcting it they hardcoded the jnext into the same block as flash was. The blackberry port isn't specifically suppose to only allow jnext and flash, but was an accident due to the way this code was developed.
Attachments
patch (3.82 KB, patch)
2012-04-21 10:39 PDT, Benjamin Meyer
manyoso: review-
patch (3.93 KB, patch)
2012-04-21 10:50 PDT, Benjamin Meyer
no flags
Benjamin Meyer
Comment 1 2012-04-21 10:39:17 PDT
WebKit Review Bot
Comment 2 2012-04-21 10:41:45 PDT
Attachment 138245 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/ChangeLog', u'Sou..." exit_code: 1 Source/WebKit/blackberry/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Treat
Comment 3 2012-04-21 10:43:32 PDT
Comment on attachment 138245 [details] patch Put the bug number in the changelog and commit message. Also, remove the typo in the changelog entry for 'implement ion' that should be 'implementation'
Benjamin Meyer
Comment 4 2012-04-21 10:50:41 PDT
WebKit Review Bot
Comment 5 2012-04-21 16:19:15 PDT
Comment on attachment 138247 [details] patch Clearing flags on attachment: 138247 Committed r114849: <http://trac.webkit.org/changeset/114849>
WebKit Review Bot
Comment 6 2012-04-21 16:19:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.